# gingify

./: .gitignore  README.md  index.html  privacy.html  style.css
.github/workflows/: build.yml  deploy-pages.yml
gingify-extension/: manifest.json  sleep.html  sleep.js  welcome.html  welcome.js
gingify-extension/background/: service_worker.js  storage_keys.js
gingify-extension/content/: sleep_overlay.js
gingify-extension/docs/: HANDOFF.md  PERMISSIONS.md
gingify-extension/options/: options.css  options.html  options.js
gingify-extension/popup/: popup.css  popup.html  popup.js
gingify-extension/store-assets/: README.md  full_description.txt
src/: shared.css
src-tauri/: Cargo.toml  build.rs  gingify.manifest  gingify.rc  installer_hooks.nsh  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config_commands.rs  data_commands.rs  mod.rs  profile_commands.rs  trim_commands.rs
src-tauri/src/core/: bloat_scan.rs  mod.rs  monitor.rs  notifications.rs  profiler.rs  profiles.rs  suspender.rs  trimmer.rs  updater.rs
src-tauri/src/state/: app_state.rs  config.rs  mod.rs
src/detail_window/: app.css  app.js  index.html
src/onboarding/: index.html  onboarding.css  onboarding.js
src/tray_popup/: index.html  popup.css  popup.js
